my-apps/utility/fizzy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fizzy
  namespace: fizzy
  labels:
    app.kubernetes.io/name: fizzy
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: fizzy
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: fizzy
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: fizzy
          image: ghcr.io/basecamp/fizzy:sha-d729cf5
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          volumeMounts:
            - name: fizzy-storage
              mountPath: /rails/storage
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "2Gi"
              cpu: "500m"
      volumes:
        - name: fizzy-storage
          persistentVolumeClaim:
            claimName: data
